sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: illegal start of simple pattern
    for(int i = 0; i< getNombreValeurs()-2; i++){
              ^AlgCocktailSort1:6: error: '<-' expected but ';' found.
    for(int i = 0; i< getNombreValeurs()-2; i++){
                 ^AlgCocktailSort1:6: error: '<-' expected but ';' found.
    for(int i = 0; i< getNombreValeurs()-2; i++){
                                          ^AlgCocktailSort1:6: error: illegal start of simple pattern
    for(int i = 0; i< getNombreValeurs()-2; i++){
                                               ^AlgCocktailSort1:12: error: illegal start of simple expression
    for(int j = getNombreValeurs()-2; j >=0; j--){
                                    ^AlgCocktailSort1:12: error: '<-' expected but ';' found.
    for(int j = getNombreValeurs()-2; j >=0; j--){
                                           ^AlgCocktailSort1:12: error: illegal start of simple pattern
    for(int j = getNombreValeurs()-2; j >=0; j--){
                                                ^AlgCocktailSort1:18: error: illegal start of simple expression
  }
  ^